<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/blue_4"
        android:gravity="center"
        android:text="@string/edit_password"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_edit_pwd_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/old_pwd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_pwd"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <EditText
        android:id="@+id/et_edit_pwd_old"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_pwd_old"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_pwd_old" />

    <TextView
        android:id="@+id/tv_edit_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pwd"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_pwd_again"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_pwd_old" />

    <EditText
        android:id="@+id/et_edit_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_pwd"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_pwd_old"
        app:layout_constraintStart_toStartOf="@+id/et_edit_pwd_old" />

    <TextView
        android:id="@+id/tv_edit_pwd_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_pwd_again"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_pwd" />

    <EditText
        android:id="@+id/et_edit_pwd_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_pwd_again"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_pwd"
        app:layout_constraintStart_toStartOf="@+id/et_edit_pwd" />

    <Button
        android:id="@+id/btn_edit_pwd_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue_4"
        android:text="@string/edit_money"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_pwd_again"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_pwd_again" />

    <Button
        android:id="@+id/btn_edit_pwd_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue_4"
        android:text="@string/add_no"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_pwd_ok"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_pwd_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>