<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/regTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_4"
        android:gravity="center"
        android:text="@string/tv_Register_Ok"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/regPassword"
        app:layout_constraintTop_toBottomOf="@+id/regTitle" />

    <TextView
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_pwd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/regPasswordAgain"
        app:layout_constraintTop_toBottomOf="@+id/regUsername" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="15"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/regUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regUsername" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_imgUrl"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/regPasswordAgain"
        app:layout_constraintTop_toBottomOf="@+id/regPasswordAgain" />

    <LinearLayout
        android:id="@+id/ll_reg_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/regPwdAgain"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_reg_img_student"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/student" />

            <RadioButton
                android:id="@+id/rb_reg_img_worker"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/worker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_reg_img_girl"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/girl" />

            <RadioButton
                android:id="@+id/rb_reg_img_robot"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/robot" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/regPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="15"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regPassword" />

    <EditText
        android:id="@+id/regPwdAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="15"
        android:hint="@string/tv_pwd_again"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/regPasswordAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regPasswordAgain" />

    <TextView
        android:id="@+id/regPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_pwd_again"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="601dp"
        android:layout_height="5dp"
        android:layout_marginTop="24dp"
        android:background="#778899"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_reg_img" />

    <TextView
        android:id="@+id/regMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue_6"
        android:text="@string/tv_Register_Ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>